--- a/style.css
+++ b/style.css
@@ -197,7 +197,21 @@ ul {
 li{
   margin-bottom: 10px;
 }
-
+a {
+  padding: 2px;
+  color: aqua;
+}
 a:hover {
-  box-shadow: 0px 0px 18px 2px rgba(42, 174, 231, 0.6);
+  color: #2AAEE7;
+  border-bottom: 1px solid #2AAEE7;
+}
+a:visited,
+a:active {
+  color: aqua;
+}
+code {
+  font-family: "Courier New", monospace;
+}
+section {
+  margin-bottom: 20px;
 }
