--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ aside {
   display: block;
 }
 a {
-  display: inline-block;
+  display: block;
 }
 /*одинаковое поведение шрифтов для разных браузеров*/
 html,
@@ -91,6 +91,36 @@ h6 {
 body {
   background: #000;
   color: aliceblue;
+}
+nav{
+   width: 100%;
+  background-color: #2AAEE7;
+}
+nav ol {
+  width: 920px;
+  height: 55px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.navigation li {
+  width: 150px;
+  list-style: none;
+  text-align: center;
+}
+
+ .navigation li a {
+  padding: 20px;
+  color: azure;
+  border: 1px solid black;
+ }
+
+.navigation li a:hover {
+  background-color: rgb(0, 153, 255);
+  font-size: 18px;
+  padding: 18px;
+  transition: all 0.6s ease-in;
 }
 
 .wrapper {
@@ -173,7 +203,7 @@ h3 {
   margin-bottom: 20px;
 }
 
-li::before {
+ul li::before {
   content: "→" ;
 }
 
@@ -194,19 +224,19 @@ ul {
   margin-bottom: 20px;
 }
 
-li{
+ul li{
   margin-bottom: 10px;
 }
-a {
+.project ul li a {
   padding: 2px;
   color: aqua;
 }
-a:hover {
+.project ul li a:hover {
   color: #2AAEE7;
   border-bottom: 1px solid #2AAEE7;
 }
-a:visited,
-a:active {
+.project ul li a:visited,
+.project ul li a:active {
   color: aqua;
 }
 code {
@@ -215,3 +245,19 @@ code {
 section {
   margin-bottom: 20px;
 }
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: #2AAEE7;
+}
+footer a {
+  width: 100px;
+  margin:0 auto;
+  padding: 17px 0;
+  border: 1px solid black;
+  text-align: center;
+}
+footer a:hover {
+  background-color: rgb(0, 153, 255);
+  transition: all 0.6s ease-in;
