--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   border: 0;
 }
+
 /* изменение подсчета ширины блока для удобной верстки*/
 *,
 *:before,
@@ -12,15 +13,18 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 /* убрать линии обводки у некоторых браузеров*/
 :focus,
 :active {
   outline: none;
 }
+
 a:focus,
 a:active {
   outline: none;
 }
+
 /*делает теги блочными*/
 nav,
 footer,
@@ -28,9 +32,11 @@ header,
 aside {
   display: block;
 }
+
 a {
   display: block;
 }
+
 /*одинаковое поведение шрифтов для разных браузеров*/
 html,
 body {
@@ -56,23 +62,29 @@ textarea {
 input::-ms-clear {
   display: none;
 }
+
 button {
   cursor: pointer;
 }
+
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
+
 a,
 a:visited {
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: none;
 }
+
 ul li {
   list-style: none;
 }
+
 img {
   vertical-align: top;
 }
@@ -87,15 +99,18 @@ h6 {
   font-size: inherit;
   font-weight: 400;
 }
+/* конец обнуляющего кода */
 
 body {
   background: #000;
   color: aliceblue;
 }
+
 nav{
    width: 100%;
   background-color: #2AAEE7;
 }
+
 nav ol {
   width: 920px;
   height: 55px;
@@ -112,7 +127,7 @@ nav ol {
 
  .navigation li a {
   padding: 20px;
-  color: azure;
+  color: aliceblue;
   border: 1px solid black;
  }
 
@@ -162,6 +177,7 @@ main>p {
   justify-content: space-around;
   gap: 50px;
 }
+
 .contact a {
   display: block;
   margin-bottom: 10px;
@@ -227,21 +243,26 @@ ul {
 ul li{
   margin-bottom: 10px;
 }
+
 .project ul li a {
   padding: 2px;
   color: aqua;
 }
+
 .project ul li a:hover {
   color: #2AAEE7;
   border-bottom: 1px solid #2AAEE7;
 }
+
 .project ul li a:visited,
 .project ul li a:active {
   color: aqua;
 }
+
 code {
   font-family: "Courier New", monospace;
 }
+
 section {
   margin-bottom: 20px;
 }
@@ -251,13 +272,17 @@ footer {
   height: 50px;
   background-color: #2AAEE7;
 }
+
 footer a {
   width: 100px;
   margin:0 auto;
   padding: 17px 0;
   border: 1px solid black;
   text-align: center;
+  color: aliceblue;
 }
+
 footer a:hover {
   background-color: rgb(0, 153, 255);
   transition: all 0.6s ease-in;
+}
