--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ aside {
 }
 
 a {
-  display: block;
+  display: inline-block;
 }
 
 /*одинаковое поведение шрифтов для разных браузеров*/
@@ -126,6 +126,7 @@ nav ol {
 }
 
  .navigation li a {
+  display: block;
   padding: 20px;
   color: aliceblue;
   border: 1px solid black;
@@ -269,14 +270,18 @@ section {
 
 footer {
   width: 100%;
-  height: 50px;
+  height: 102px;
   background-color: #2AAEE7;
 }
 
-footer a {
-  width: 100px;
+footer div {
+  width: 920px;
   margin:0 auto;
-  padding: 17px 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+footer div a {
   border: 1px solid black;
   text-align: center;
   color: aliceblue;
@@ -284,5 +289,36 @@ footer a {
 
 footer a:hover {
   background-color: rgb(0, 153, 255);
+  transition: all 0.6s ease-in;
+}
+
+footer p {
+  text-align: center;
+  color: darkgrey;
+  font-size: 10px;
+}
+
+.top {
+  position: fixed;
+  bottom: 100px;
+  right: 30px;
+  width: 50px;
+  height: 50px;
+  padding: 0;
+  color: aliceblue;
+  background-color: darkslateblue;
+  border-radius: 50%;
+}
+
+.top p {
+  text-align: center;
+  padding: 18px 0;
+}
+
+.top:hover {
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  background-color: rgb(106, 85, 240);
   transition: all 0.6s ease-in;
 }
